sm6150-common: Add display colour configs to overlay
Change-Id: I13811e4a8f2957e33e715d7de7bc473e92fd1428
Signed-off-by: Henrique Pereira <hlcpereira@pixelexperience.org>
Signed-off-by: adi8900 <adrianszymanski242@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -586,4 +586,11 @@
     <bool name="config_proximityCheckOnWakeEnabledByDefault">true</bool>
 
     <integer name="config_deviceLightCapabilities">232</integer>
+
+    <integer-array name="config_availableColorModes">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </integer-array>
 </resources>
