--- a/rro_overlays/TetheringOverlay/res/values/config.xml
+++ b/rro_overlays/TetheringOverlay/res/values/config.xml
@@ -32,6 +32,7 @@
     <string-array translatable="false" name="config_tether_wifi_regexs">
         <item>"softap0"</item>
         <item>"wlan0"</item>
+        <item>"wlan1"</item>
     </string-array>
 
     <!-- List of regexpressions describing the interface (if any) that represent tetherable
